Fix padding on mobile services pages and decrease font size in account menu on mobile nav

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -79,6 +79,10 @@ body {
     transform: translateY(-50%);
 }
 
+.dropdown-menu-right a {
+    font-size: 12px !important;
+}
+
 /* home page */
 
 .home-gold-border {
